--- a/service-items-dev.properties
+++ b/service-items-dev.properties
@@ -1,3 +1,3 @@
-setting.text=Setting up the develop environment
-setting.autor=Akuniyoshi
+setting.text=Setting up the develop environment....cheking actuator
+setting.autor=Akuniyoshi actuator
 setting.email=alejandro.kuniyoshi@gmail.com
